# BeautyApp

./: .gitignore  LICENSE  README.md  log.txt
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ai/: AIController.cpp  AIController.h  OrtDetector.cpp  YoloDetector.cpp  ai.cpp  types.h
app/src/main/cpp/ai/engine/: DNNEngine.cpp  DNNEngine.h  Engine.h  OrtEngine.cpp  OrtEngine.h
app/src/main/cpp/jni/: jni_ai.cpp  jni_filters.cpp  jni_image_utils.cpp
app/src/main/cpp/utils/: NativeCamera.cpp  NativeCamera.h
app/src/main/java/com/example/beautyapp/ui/: CameraScreen.kt  ModelManagementScreen.kt  SettingsScreen.kt  YoloObjectListScreen.kt
app/src/main/java/com/example/beautyapp/ui/camera/: CameraOverlay.kt  CameraView.kt
app/src/main/java/com/example/beautyapp/ui/components/: AppHud.kt  CommonUi.kt
app/src/main/java/com/example/beautyapp/util/: ModelManager.kt
app/src/main/java/com/example/beautyapp/viewmodel/: BeautyViewModel.kt
app/src/main/java/com/mirror2922/ecvl/: BeautyApplication.kt  MainActivity.kt  NativeLib.kt
app/src/main/java/com/mirror2922/ecvl/ui/: CameraScreen.kt  SettingsScreen.kt
app/src/main/java/com/mirror2922/ecvl/ui/camera/: CameraView.kt
app/src/main/java/com/mirror2922/ecvl/ui/components/: FilterPanel.kt
app/src/main/java/com/mirror2922/ecvl/ui/components/camera/: CameraOverlay.kt  (+2 more)
app/src/main/java/com/mirror2922/ecvl/ui/screens/: MainScreen.kt
app/src/main/java/com/mirror2922/ecvl/viewmodel/: BeautyViewModel.kt
(+9 files in other folders)
